[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/FallGame/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 68
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CoinLabel" type="Label" parent="CanvasLayer"]
margin_left = 176.0
margin_top = 152.0
margin_right = 274.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 1 )
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 75
custom_constants/margin_top = 225
custom_constants/margin_left = 75
custom_constants/margin_bottom = 75
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_left = 75.0
margin_top = 225.0
margin_right = 949.0
margin_bottom = 525.0
custom_constants/separation = 25
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_right = 874.0
margin_bottom = 83.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Game1" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 874.0
margin_bottom = 83.0
grow_horizontal = 0
text = "Game 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 874.0
margin_bottom = 191.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Game2" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer2"]
margin_right = 874.0
margin_bottom = 83.0
text = "Game 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 874.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Game3" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer3"]
margin_right = 874.0
margin_bottom = 84.0
text = "Game 3"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer/Game1" to="." method="_on_Game1_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer2/Game2" to="." method="_on_Game2_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer3/Game3" to="." method="_on_Game3_pressed"]
